--- a/challenges/Carrom.html
+++ b/challenges/Carrom.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="Carrom.css">
 </head>
 <body>
+    <div class="carrom">
+        <div class="box1"></div>
+    
+        <div class="box2"></div>
+        <div class="box3"></div> 
+        <div class="box4"></div> 
+
+
+    </div>
     
 </body>
 </html>
